<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_systems">Systems</string>
    <string name="title_games">Games</string>
    <string name="title_settings">Settings</string>
    <string name="recent">Recents</string>
    <string name="favorites">Favorites</string>
    <string name="discover">Discover</string>
    <string name="rescan">Rescan</string>
    <string name="none">None</string>
    <string name="directory">Directory</string>
    <string name="display_filter">Display filter</string>
    <string name="roms">ROMs</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="show_all">Show All</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="game_page_search_suggestion">Search games</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_input">Input</string>
    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_title_enable_autosave">Autosave state</string>
    <string name="settings_description_enable_autosave">Save state when exiting via game menu</string>
    <string name="settings_title_enable_touch_feedback">Vibrate on touch</string>
    <string name="settings_title_tilt_sensitivity">Tilt sensor sensitivity</string>
    <string name="settings_title_hd_quality">HD mode quality</string>
    <string name="settings_gamepad_settings">Gamepad settings</string>
    <string name="settings_gamepad_button_name">Button %1$s</string>
    <string name="settings_title_ambient_mode">Ambient mode</string>
    <string name="settings_description_hd_quality">Adjust the quality of HD mode</string>
    <string name="settings_title_immersive_mode">Immersive mode</string>
    <string name="settings_description_immersive_mode">Dynamically colors the background based on game visuals</string>
    <string name="settings_description_ambient_mode">Dynamically colors the background based on game visuals</string>
    <string name="settings_retropad_button_name">RetroPad %1$s</string>
    <string name="settings_retropad_button_unassigned">Unassigned</string>
    <string name="settings_gamepad_category_enabled">Enabled Gamepads</string>
    <string name="settings_gamepad_category_general">General</string>
    <string name="settings_gamepad_title_reset_bindings">Reset bindings</string>
    <string name="settings_gamepad_title_game_menu">Menu</string>
    <string name="settings_title_open_cores_selection">Change Cores</string>
    <string name="settings_description_open_cores_selection">Select which core is associated to a system</string>
    <string name="settings_core_selection_ds_info">DeSmuME is deprecated and will be removed in one of the next updates. Save your progress inside the game, then switch to melonDS. In-game saves will load automatically in melonDS, but save states can only be used with the core that created them.</string>
    <string name="settings_title_display_bios_info">BIOS</string>
    <string name="settings_description_display_bios_info">Display detected and supported BIOS files</string>
    <string name="settings_bios_category_detected">Detected</string>
    <string name="settings_bios_category_not_detected">Supported</string>
    <string name="settings_title_reset_settings">Factory reset</string>
    <string name="settings_description_reset_settings">Reset Application to its factory settings</string>
    <string name="settings_title_advanced_settings">Advanced settings</string>
    <string name="settings_description_advanced_settings">Display advanced settings</string>
    <string name="settings_title_low_latency_audio">Prefer low-latency audio</string>
    <string name="settings_description_low_latency_audio">Reduce audio latency on supported devices. Might increase audio glitches.</string>
    <string name="settings_title_direct_game_load">Direct game load</string>
    <string name="settings_description_direct_game_load">(Experimental) Reduce loading time and cache usage on supported consoles.</string>
    <string name="settings_category_experimental">Experimental</string>
    <string name="settings_title_citra_experimental_save_states">3DS Save States (Experimental)</string>
    <string name="settings_description_citra_experimental_save_states">(Experimental) Enable manual save and load states for Nintendo 3DS games. Auto-save is not supported. States may be unstable or use significant storage.</string>
    <string name="settings_title_enable_rumble">Rumble</string>
    <string name="settings_description_enable_rumble">Enable rumble in supported games and controllers</string>
    <string name="settings_title_enable_device_rumble">Device rumble</string>
    <string name="settings_description_enable_device_rumble">When no controller is connected vibrate the device instead</string>
    <string name="reset_settings_warning_message_title">Are you sure?</string>
    <string name="reset_settings_warning_message_description">This will reset Application to its factory settings. Saves and States will be preserved.</string>
    <string name="settings_title_save_sync">Cloud saves</string>
    <string name="settings_description_save_sync">Back up and Sync your saves on the cloud</string>
    <string name="settings_save_sync_refresh">Manual Sync</string>
    <string name="settings_save_sync_refresh_description">Perform a manual Sync now.\n%1$s</string>
    <string name="settings_save_sync_enable_auto">Auto-Sync</string>
    <string name="settings_save_sync_enable_auto_description">Automatically perform a Sync before and after a game session when connected to Wifi</string>
    <string name="settings_save_sync_configure">Configure %1$s</string>
    <string name="settings_save_sync_include_saves">Sync in-game saves</string>
    <string name="settings_save_sync_include_saves_description">%1$s on device</string>
    <string name="settings_save_sync_include_states">Sync states</string>
    <string name="settings_save_sync_include_states_description">More convenient, but heavier and less reliable. Choose which cores/systems you want to sync</string>
    <string name="game_context_menu_add_to_favorites">Add to favorites</string>
    <string name="game_context_menu_remove_from_favorites">Remove from favorites</string>
    <string name="game_context_menu_resume">Resume</string>
    <string name="game_context_menu_restart">Restart</string>
    <string name="game_context_menu_create_shortcut">Pin to launcher</string>
    <string name="home_empty_title">Select ROMs directory</string>
    <string name="home_empty_message">Roid needs to scan a directory containing ROM files.\nThis might take up to a few minutes.</string>
    <string name="home_empty_action">Select Directory</string>
    <string name="home_empty_local_path">Or place ROM files directly in:\n%1$s</string>
    <string name="home_notification_desmume_deprecated_title">DeSmuME is being retired</string>
    <string name="home_notification_desmume_deprecated_message">Save in-game, then switch to melonDS to keep your progress. Save states won\'t transfer and will remain usable only in DeSmuME.</string>
    <string name="home_notification_desmume_deprecated_action">Switch to melonDS</string>
    <string name="game_menu_save">Save</string>
    <string name="game_menu_load">Load</string>
    <string name="game_menu_restart">Restart</string>
    <string name="game_menu_quit">Quit</string>
    <string name="game_menu_settings">Settings</string>
    <string name="game_menu_state">State %1$s</string>
    <string name="game_menu_change_disk_button">Change Disk</string>
    <string name="game_menu_edit_touch_controls">Edit Controls</string>
    <string name="game_menu_mute_audio">Mute</string>
    <string name="game_menu_fast_forward">Fast-Forward</string>
    <string name="game_menu_game_speed">Game speed</string>
    <string name="game_menu_change_disk_disk">Disk %1$s</string>
    <string name="game_menu_tilt_sensor">Tilt Sensor</string>
    <string name="game_menu_share">Share to Roomcord</string>
    <string name="game_menu_share_title">Share</string>
    <string name="game_loading_preparing_game">Preparing game&#x2026;</string>
    <string name="game_toast_settings_button_using_gamepad">Gamepad detected. Access settings menu with %1$s.</string>
    <string name="game_toast_load_state_failed">Cannot load this state</string>
    <string name="game_toast_quick_save_loaded">Quick loaded</string>
    <string name="game_toast_quick_save_saved">Quick saved</string>
    <string name="empty_view_default">No Items</string>
    <string name="core_settings_title">Core Settings</string>
    <string name="core_settings_category_preferences">Preferences</string>
    <string name="core_settings_category_controllers">Controllers</string>
    <string name="core_settings_controller">Controller %1$s</string>
    <string name="game_menu_title">Game menu</string>
    <string name="notification_channel_name">All notifications</string>
    <string name="library_index_notification_title">ROMs scanning in progress</string>
    <string name="library_index_notification_message">This can take up to a few minutes</string>
    <string name="save_sync_notification_title">Cloud save Sync in progress</string>
    <string name="save_sync_notification_message">This can take up to a few minutes</string>
    <string name="game_running_notification_title">%1$s is running</string>
    <string name="game_running_notification_title_alternative">Game is running</string>
    <string name="game_running_notification_message">Make sure to save your progress</string>
    <string name="installing_core_notification_title">Updating Cores</string>
    <string name="installing_core_notification_message">This can take up to a few minutes</string>
    <string name="game_loader_error_gl_incompatible">This Core requires an OpenGL ES version which is not supported by your device.</string>
    <string name="game_loader_error_load_core">It looks like the Libretro core was not loaded. Make sure your device is connected to internet and try to rescan your library. If the issue persist this core might not be supported on your device.</string>
    <string name="game_loader_error_load_game">Something bad happened while loading your game. Make sure the ROM is supported by Roid and rescan your games.</string>
    <string name="game_loader_error_save">Something bad happened with your save file. If the issue persists, try disabling auto-save.</string>
    <string name="game_loader_error_generic">Something bad happened. Try the following:\n \n\u2022 Disable auto-save and re-run the game \n\u2022 Go into Android settings and clear the app cache \n\u2022 Go into Roid settings and perform a Factory Reset \n\nIf none of the above works, it might be possible that this Game/Core is not supported by this device.</string>
    <string name="game_loader_error_missing_bios">It looks like you\'re missing the required BIOS, put them in your ROMs directory and rescan. Required files: %1$s</string>
    <string name="game_shortcut_error">Something bad happened while loading your game. Please make sure this game still exists in your library.</string>
    <string name="dialog_saf_not_found">This device does not support the StorageAccessFramework file picker. Please manually copy uncompressed ROM files into %1$s and hit Rescan.</string>
    <string name="system_grid_details">%1$s games</string>
    <string name="tv_folder_picker_title">Select ROMs Directory</string>
    <string name="tv_folder_picker_action_choose">Select</string>
    <string name="tv_folder_picker_action_cancel">Cancel</string>
    <string name="tv_folder_storage_primary">Primary storage</string>
</resources>