<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_game_menu"
    app:startDestination="@id/game_menu">

    <fragment
        android:id="@+id/game_menu"
        android:name="com.swordfish.lemuroid.app.mobile.feature.gamemenu.GameMenuFragment"
        android:label="@string/game_menu_title"/>

    <fragment
        android:id="@+id/game_menu_core_options"
        android:name="com.swordfish.lemuroid.app.mobile.feature.gamemenu.GameMenuCoreOptionsFragment"
        android:label="@string/core_settings_title"/>

    <fragment
        android:id="@+id/game_menu_save"
        android:name="com.swordfish.lemuroid.app.mobile.feature.gamemenu.GameMenuSaveFragment"
        android:label="@string/game_menu_save"/>

    <fragment
        android:id="@+id/game_menu_load"
        android:name="com.swordfish.lemuroid.app.mobile.feature.gamemenu.GameMenuLoadFragment"
        android:label="@string/game_menu_load"/>

</navigation>
