<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:visibility="invisible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/grid_unit_2x">

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="save_entry_slot1,save_entry_slot2,save_entry_slot3,save_entry_slot4"
            app:flow_wrapMode="aligned"
            app:flow_verticalGap="16dp"
            app:flow_horizontalGap="16dp"
            app:flow_maxElementsWrap="@integer/game_menu_mobile_columns"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:flow_verticalGap="16dp"
            app:flow_horizontalGap="16dp"
            app:constraint_referenced_ids="menu_change_disk,menu_edit_touch_controls,save_entry_reset,save_entry_settings,save_entry_close"
            app:flow_wrapMode="chain"
            app:flow_horizontalStyle="spread_inside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flow"
            app:layout_constraintVertical_bias="0.0" />

        <include
            android:id="@+id/save_entry_slot1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            layout="@layout/layout_game_menu_save_entry"/>

        <include
            android:id="@+id/save_entry_slot2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            layout="@layout/layout_game_menu_save_entry"/>

        <include
            android:id="@+id/save_entry_slot3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            layout="@layout/layout_game_menu_save_entry"/>

        <include
            android:id="@+id/save_entry_slot4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            layout="@layout/layout_game_menu_save_entry"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_change_disk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_menu_change_disk_button"
            style="@style/DialogButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_edit_touch_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_menu_edit_touch_controls"
            style="@style/DialogButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_entry_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_menu_quit"
            style="@style/DialogButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_entry_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_menu_settings"
            style="@style/DialogButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_entry_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_menu_restart"
            style="@style/DialogButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
